update personal info

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: BY Blog
+title: Wang`s Blog
 SEOTitle: YonghaoWang`s Blog
 header-img: images/backgroud.jpg
 email: lielast@hotmail.com
