--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
 title: Wang`s Blog
 SEOTitle: YonghaoWang`s Blog
-header-img: images/backgroud.jpg
+header-img: images/background.jpg
 email: lielast@hotmail.com
 description: "But things evolve ,they change , people change."
-keyword: "Spring, Java, Linux, Canvas, Reading, Spring cloud, Spring boot"
+keyword: "Spring, Java, Linux, Canvas, Reading, Spring cloud, Spring boot, Blog"
 url: "https://yonghaowang.github.io/"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/YonghaoWang/YonghaoWang.github.io.git" # you code repository
