--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Wang`s Blog
 SEOTitle: YonghaoWang`s Blog
 header-img: images/background.jpg
-email: lielast@hotmail.com
+email: admin@mrwang.pw
 description: "But things evolve ,they change , people change."
 keyword: "Spring, Java, Linux, Canvas, Reading, Spring cloud, Spring boot, Blog, Life,
  Ruby, Windows, Network, Unarchived"
