--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: images/background.jpg
 email: admin@mrwang.pw
 description: "But things evolve ,they change , people change."
 keyword: "Spring, Java, Linux, Canvas, Reading, Spring cloud, Spring boot, Blog, Life,
- Ruby, Windows, Network, Unarchived"
+ Ruby, Windows, Network, Unarchived, Algorithm"
 url: "https://yonghaowang.github.io/"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/YonghaoWang/YonghaoWang.github.io.git" # you code repository
