更新首页的图片

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Reed`s Blog
 SEOTitle: Reed`s Blog
-header-img: images/background.jpg
+header-img: images/background.png
 email: admin@mrwang.pw
 description: "But things evolve ,they change , people change."
 keyword: "Spring, Java, Linux, Canvas, Reading, Spring cloud, Spring boot, Blog, Life,
