[fix]名词的大小写未能统一的错误

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ SEOTitle: Reed`s Blog
 header-img: images/background.png
 email: admin@mrwang.pw
 description: "But things evolve ,they change , people change."
-keyword: "Spring, Java, Linux, Canvas, Reading, Spring cloud, Spring boot, Blog, Life,
+keyword: "Spring, Java, Linux, Books, Spring Cloud, Spring Boot, Blog, Life,
  Ruby, Windows, Network, Unarchived, Algorithm"
 url: "https://yonghaowang.github.io/"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
