--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: images/background.png
 email: admin@mrwang.pw
 description: "But things evolve ,they change , people change."
 keyword: "Spring, Java, Linux, Books, Spring Cloud, Spring Boot, Blog, Life,
- Ruby, Windows, Network, Unarchived, Algorithm"
+ Ruby, Windows, Network, Unarchived, Algorithm, HTML"
 url: "https://yonghaowang.github.io/"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/YonghaoWang/YonghaoWang.github.io.git" # you code repository
