--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Reed`s Blog
-SEOTitle: Reed`s Blog
+title: Reed's Blog
+SEOTitle: Reed's Blog
 header-img: images/background.png
 email: admin@mrwang.pw
 description: "But things evolve ,they change , people change."
